# asterion-admin

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  adminfoundry_roadmap_konsolidiert.md  adminfoundry_v1_providers_roadmap.md  alembic_shared.ini  alembic_tenant.ini  blog.db  coreAdmin-api.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  refactor.md  saas.db  vitest.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
adminfoundry/: __init__.py  admin_config.py  auth.py  cache.py  cleanup.py  cli.py  dashboard.py  database.py  dependencies.py  i18n.py  main.py  pagination.py  redis_client.py  settings.py  storage.py  token_blacklist.py  webhooks.py
adminfoundry/actions/: __init__.py  router.py
adminfoundry/admin/: __init__.py  _helpers.py  capabilities.py  context.py  contract.py  filter_builder.py  inline.py  model_admin.py  navigation.py  permission_matrix_router.py  policy.py  registry.py  router.py  saved_filter_router.py  schema_builder.py  serializer.py  ui_preferences.py  ui_renderer.py
adminfoundry/audit/: __init__.py  service.py
adminfoundry/auth/: dependencies.py  password.py  password_reset.py  revocation.py  router.py  schemas.py  tokens.py  totp.py  two_factor_router.py
adminfoundry/authz/: __init__.py  catalog.py  policy_engine.py  role_caps.py  rules.py
adminfoundry/cli/: main.py
adminfoundry/contract/: router.py  service.py
adminfoundry/core/: __init__.py  app_factory.py  config.py  installers.py  middleware.py  net.py  runtime.py
adminfoundry/crud/: query.py  router.py  services.py
adminfoundry/db/: dependencies.py
adminfoundry/extensions/: __init__.py  base.py  context.py  lifecycle.py  registry.py  storage_s3.py
adminfoundry/fields/: __init__.py  file_field.py  scalar.py
adminfoundry/middleware/: audit.py  errors.py  logging.py  rate_limit.py  security_headers.py  tenant.py
adminfoundry/models/: __init__.py  associations.py  audit_log.py  base.py  change_request.py  impersonation_log.py  password_reset_token.py  revoked_token.py  role.py  role_permission.py  saved_filter.py  tenant.py  tenant_membership.py  two_factor_backup_code.py  user.py
adminfoundry/notifications/: base.py
adminfoundry/observability/: admin_metrics.py
adminfoundry/providers/: __init__.py  auth.py  base.py  permissions.py  tenants.py  users.py
adminfoundry/registry/: admin.py  registry.py
adminfoundry/root/: users.py
adminfoundry/routers/: admin_ui.py  audit.py  auth.py  health.py  roles.py  tenants.py  users.py  workflow.py
adminfoundry/schemas/: admin_contract.py  audit.py  builder.py  capabilities.py  client_config.py  navigation.py  policy.py  role.py  tenant.py  user.py
adminfoundry/security/: protected_fields.py  validation.py
adminfoundry/services/: workflow.py
adminfoundry/storage/: router.py
adminfoundry/tenancy/: __init__.py  bootstrap.py  context.py  dependencies.py  middleware.py  resolver.py  schema_strategy.py  strategy.py
adminfoundry/ui/: admin_pages.py  navigation.py  router.py
asterion/: __init__.py  app.py
asterion/actions/: __init__.py  router.py
asterion/admin/: __init__.py  context.py  fieldset.py  inline.py  login_contract_router.py  member_router.py  navigation_router.py  permission_matrix_router.py  policy.py  saved_filter_router.py
asterion/audit/: __init__.py  service.py
asterion/auth/: __init__.py  dependencies.py  invite.py  password_policy.py  password_reset.py  provisioning.py  rate_limiter.py  revocation.py  router.py  schemas.py  service_accounts.py  tokens.py  totp.py  two_factor_router.py
asterion/authz/: __init__.py  catalog.py  permissions.py  registry.py
asterion/builtins/: __init__.py  admin.py  installer.py
asterion/cli/: __init__.py  main.py
asterion/contract/: contributions.py  router.py  service.py
asterion/core/: __init__.py  app_factory.py  config.py  errors.py  health.py  installers.py  logging.py  middleware.py  net.py  observability.py  runtime.py
asterion/crud/: __init__.py  payload.py  query.py  router.py  services.py  types.py
asterion/db/: __init__.py  alembic_support.py  dependencies.py  session.py
asterion/extensions/: __init__.py  base.py  context.py  errors.py  lifecycle.py  registry.py
asterion/fields/: __init__.py  base.py  file_field.py  registry.py  relation.py  scalar.py
asterion/i18n/: __init__.py
asterion/models/: __init__.py  audit_log.py  base.py  data_subject_request.py  impersonation_log.py  password_reset_token.py  permission_catalog.py  platform_rbac.py  revoked_token.py  saved_filter.py  tenant.py  tenant_audit_log.py  tenant_membership.py  tenant_rbac.py  two_factor_backup_code.py  user.py
asterion/notifications/: __init__.py  base.py
asterion/privacy/: classification.py  export.py  retention.py
asterion/providers/: __init__.py  auth.py  base.py  permissions.py  tenants.py  users.py
asterion/registry/: __init__.py  admin.py  errors.py  registry.py
asterion/root/: __init__.py  impersonation.py  (+3 more)
coreAdmin_api/: admin_config.py  auth.py  cli.py  main.py  settings.py
docs/: DATA_PROCESSING.md  PRIVACY.md  architecture.md  auth-architecture.md  auth-oauth.md  deployment.md  email.md  extensions.md  feature-index.md  model-admin.md  permission-matrix.md  protected-fields.md  review-hardening-roadmap.md  roadmap.md  security.md  stabilization.md  tenancy.md
tests/: _helpers.py  conftest.py  test_admin_actions.py  test_admin_contract.py  test_admin_crud.py  test_admin_schema_builder.py  test_admin_ui.py  test_admin_ui_pages.py  test_architecture_boundary.py  test_auth.py  test_auth_tokens.py  test_authorization.py  test_cleanup_cli.py  test_client_contract.py  test_dashboard_boundary.py  test_framework_boundary.py  test_health.py  test_models_init.py  test_optional_imports.py  test_role_permissions.py  test_roles.py  test_security.py  test_tenancy_package.py  test_tenant_membership.py  test_tenant_security_gaps.py  test_tenants.py  test_user_roles_mapper.py  test_users.py  test_webhooks_shim.py  test_workflow.py
(+421 files in other folders)
