[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adminfoundry"
version = "0.1.0"
description = "FastAPI admin framework with built-in UI, JWT auth, RBAC, and multi-tenancy"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Arne Wacker", email = "arnewacker@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "admin", "crud", "multi-tenant", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.111.0",
    "tzdata>=2024.1",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "python-jose[cryptography]>=3.3.0",  # JWT encode/decode (auth/tokens.py)
    "bcrypt>=4.0.0",                     # password hashing (auth/password.py)
    "typer>=0.12.0",                     # CLI (cli/main.py)
    "jinja2>=3.1.0",                     # UI templates (ui/templates/*.html)
]

[project.urls]
Homepage = "https://github.com/ArnWac/adminfoundry"
Repository = "https://github.com/ArnWac/adminfoundry"
"Bug Tracker" = "https://github.com/ArnWac/adminfoundry/issues"
Changelog = "https://github.com/ArnWac/adminfoundry/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Production driver
postgres = ["asyncpg>=0.29.0"]

# Dev / test driver. Also good enough for local single-tenant demos.
sqlite = ["aiosqlite>=0.20.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",        # fastapi.testclient transitively needs it
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "ruff>=0.6.0",
    "build>=1.2.0",
]

# Parked extras (Redis-backed rate limiter, S3 storage, xlsx import/export,
# webhooks, yaml config) are intentionally NOT declared here. The roadmap
# parks all of them as future extensions. Declaring them now would install
# packages with no corresponding code paths.

[project.scripts]
adminfoundry = "adminfoundry.cli:app"

# Third-party apps register custom CLI commands via this entry-points group:
#   [project.entry-points."adminfoundry.commands"]
#   my_command = "myapp.cli:my_command_fn"

[tool.setuptools.packages.find]
where = ["."]
include = ["adminfoundry*"]

[tool.setuptools.package-data]
adminfoundry = [
    "py.typed",
    "ui/templates/**/*",
    "ui/static/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "postgres: integration tests that require a real PostgreSQL server (set ADMINFOUNDRY_TEST_POSTGRES_URL to enable)",
]

# ---------------------------------------------------------------------------
# Linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "migrations/shared/versions",
    "migrations/tenant/versions",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default args (FastAPI's Depends pattern)
    "UP007", # X | Y instead of Optional[X] — fine but verbose noise for now
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use loose patterns: pytest.raises(Exception), mutable
# class defaults on stub ModelAdmins, late imports for cycle-breaking, etc.
"tests/**" = [
    "E501",
    "B008",
    "RUF001",
    "RUF012",
    "B017",
    "E402",
    "RUF059",
]
"migrations/**" = ["E501"]
"**/__init__.py" = ["F401"]
# ModelAdmin uses class-level lists/dicts as user-facing API surface;
# subclasses get fresh copies via __init_subclass__.
"adminfoundry/registry/**" = ["RUF012"]
"adminfoundry/builtins/**" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
