[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asterion-admin"
version = "0.1.49"
description = "FastAPI admin framework with built-in UI, JWT auth, RBAC, and multi-tenancy"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Arne Wacker", email = "arnewacker@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "admin", "crud", "multi-tenant", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.111.0",
    "tzdata>=2024.1",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "python-jose[cryptography]>=3.3.0",  # JWT encode/decode (auth/tokens.py)
    "bcrypt>=4.0.0",                     # password hashing (auth/password.py)
    "pyotp>=2.9.0",                      # TOTP 2FA (auth/totp.py)
    "typer>=0.12.0",                     # CLI (cli/main.py)
    "jinja2>=3.1.0",                     # UI templates (ui/templates/*.html)
    "python-multipart>=0.0.9",           # file-upload routes (storage + import_export);
    #                                      the storage router is always mounted, so FastAPI
    #                                      requires this at import — must be a core dep, not dev-only.
]

[project.urls]
Homepage = "https://github.com/ArnWac/asterion-admin"
Repository = "https://github.com/ArnWac/asterion-admin"
"Bug Tracker" = "https://github.com/ArnWac/asterion-admin/issues"
Changelog = "https://github.com/ArnWac/asterion-admin/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Production driver
postgres = ["asyncpg>=0.29.0"]

# Dev / test driver. Also good enough for local single-tenant demos.
sqlite = ["aiosqlite>=0.20.0"]

# Excel import/export via the import_export extension. CSV stays in core
# (uses stdlib csv); XLSX is opt-in because openpyxl is a non-trivial dep
# that only some apps need.
xlsx = ["openpyxl>=3.1.0"]

# S3-compatible storage backend (Roadmap P4.6). Pulls in boto3 only when
# the host app actually wants S3-backed FileFields; LocalFileStorage in
# core has no third-party dependency.
storage-s3 = ["boto3>=1.34"]

# Distributed login rate limiter (Review R7). Core only depends on the
# RateLimiterBackend Protocol; RedisLoginRateLimiter is duck-typed against
# any async Redis client. This extra provides one.
rate-limit-redis = ["redis>=5.0"]

# SMTP delivery for password-reset + member-invite emails (+ any app event).
# Core ships only the notifier Protocols + dev-only logging defaults. aiosmtplib
# is the SMTP transport; jinja2 powers the overridable HTML/text templates
# (without it the notifier falls back to built-in plaintext).
email = ["aiosmtplib>=3.0", "jinja2>=3.1"]

# Transactional-email provider adapters (alternatives to SMTP). Each pulls only
# its own SDK; pick the one your app uses.
email-resend = ["httpx>=0.27"]
email-ses = ["boto3>=1.34"]

# Supply-chain / security tooling (G12). Used by the CI security job:
# pip-audit scans installed deps for known advisories, cyclonedx-bom emits a
# CycloneDX SBOM. Not needed at runtime — install with `.[security]` in CI or
# locally to reproduce the scans.
security = ["pip-audit>=2.7", "cyclonedx-bom>=4.0"]

# Observability (G20): per-request OpenTelemetry span + Prometheus /metrics.
# Both are optional — core degrades to a no-op without them. opentelemetry-api
# is enough to create spans (the operator wires an SDK + exporter); the sdk is
# included so a deployment can configure export out of the box.
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",        # fastapi.testclient + Resend adapter tests
    "jinja2>=3.1",          # email-extension template rendering tests
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "openpyxl>=3.1.0",      # tests for the xlsx import_export branch
    # python-multipart is now a core runtime dependency (file-upload routes).
    "boto3>=1.34",          # tests for the storage_s3 extension (with moto)
    "moto>=5.0",            # in-process S3 mock for storage_s3 tests
    "fakeredis>=2.20",      # in-process Redis mock for the redis rate-limiter tests
    "ruff>=0.15,<0.16",
    "mypy>=1.11",
    "build>=1.2.0",
    # Observability extra (G20) — so CI exercises the active metrics/tracing path.
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    # Static analysis aids for local cleanup passes (not CI gates):
    # vulture finds dead code, radon reports cyclomatic complexity /
    # maintainability. See docs/roadmap.md.
    "vulture>=2.16",
    "radon>=6.0",
]

# Parked extras (Redis-backed rate limiter, S3 storage, webhooks, yaml
# config) are intentionally NOT declared here. The roadmap parks them as
# future extensions; declaring them now would install packages with no
# corresponding code paths.

[project.scripts]
asterion = "asterion.cli:app"

# Third-party apps register custom CLI commands via this entry-points group:
#   [project.entry-points."asterion.commands"]
#   my_command = "myapp.cli:my_command_fn"

[tool.setuptools.packages.find]
where = ["."]
include = ["asterion*"]

[tool.setuptools.package-data]
asterion = [
    "py.typed",
    "ui/templates/**/*",
    "ui/static/**/*",
    # Alembic migrations ship inside the wheel so a pip-installed asterion can
    # run `asterion db upgrade-public` (and provision tenant schemas) without
    # the repo checkout. Includes env.py, script.py.mako and versions/*.py.
    "_migrations/**/*",
    # Default Jinja email templates for the email extension.
    "extensions/email/templates/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "postgres: integration tests that require a real PostgreSQL server (set ASTERION_TEST_POSTGRES_URL to enable)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["asterion"]
# Router code runs inside Starlette's TestClient worker THREAD, and the
# SQLAlchemy async DB calls hop into a GREENLET. Without both tracers,
# coverage.py silently misses every ``await session.execute(...)`` path and
# reports DB-heavy routers at ~half their true coverage. Tracing both gives
# accurate numbers.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
# mypy is enforced package-wide. The Alembic ``env.py`` files are generated
# from templates and call ``context.configure(**kwargs)`` with a dynamic dict
# that can't be statically reconciled with Alembic's overloaded signature, so
# the migration tree is excluded (it is excluded from ruff too).
python_version = "3.11"
files = ["asterion"]
exclude = "asterion/_migrations/"
ignore_missing_imports = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# Linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "asterion/_migrations/shared/versions",
    "asterion/_migrations/tenant/versions",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default args (FastAPI's Depends pattern)
    "UP007", # X | Y instead of Optional[X] — fine but verbose noise for now
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use loose patterns: pytest.raises(Exception), mutable
# class defaults on stub ModelAdmins, late imports for cycle-breaking, etc.
"tests/**" = [
    "E501",
    "B008",
    "RUF001",
    "RUF012",
    "B017",
    "E402",
    "RUF059",
]
"asterion/_migrations/**" = ["E501"]
"**/__init__.py" = ["F401"]
# ModelAdmin / InlineAdmin use class-level lists/dicts as user-facing API
# surface; subclasses get fresh copies via __init_subclass__.
"asterion/registry/**" = ["RUF012"]
"asterion/admin/**" = ["RUF012"]
"asterion/builtins/**" = ["RUF012"]
"examples/**" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
